--- a/src/app/open-product/open-product.component.html
+++ b/src/app/open-product/open-product.component.html
@@ -1,7 +1,7 @@
 <div class="productPage_container">
     <div class="productPage_content_left">
-        <lib-ngx-image-zoom [thumbImage]=main_Image_path  [fullImage]=main_Image_path [magnification]="1" [enableScrollZoom]="true" [zoomMode]="'hover'"
-        [enableLens]="true" [lensWidth]="250" [lensHeight]="150">
+        <lib-ngx-image-zoom [thumbImage]=main_Image_path [fullImage]=main_Image_path [magnification]="1"
+            [enableScrollZoom]="true" [zoomMode]="'hover'" [enableLens]="true" [lensWidth]="250" [lensHeight]="150">
         </lib-ngx-image-zoom>
         <!-- <img src="/assets/{{product_details.category}}/{{main_Image_name}}"> -->
     </div>
@@ -39,21 +39,37 @@
 
     <div class="buy_btn_right"></div>
 
-        <section class="interested_section">
-            <h1 class="!ml-8">Other interesting products</h1>
-            <ng-container *ngFor="let item of _interested_products_">
-                <mat-card class="interested_cards ml-8 mr-8">
-                    <mat-card-title-group>
-                      <mat-card-title>{{item.category | uppercase}}</mat-card-title>
-                      <mat-card-subtitle>{{item.name}}</mat-card-subtitle>
-                      <img mat-card-lg-image src="/assets/{{item.category}}/{{item.url1}}" >
-                    </mat-card-title-group>
-                    <mat-card-content>
-                        <button mat-raised-button color="primary">View</button>
-                    </mat-card-content>
-                  </mat-card>
-            </ng-container>
+    <section class="interested_section mt-10">
+        <h1 class="!ml-8">Other interesting products</h1>
+        <ng-container *ngFor="let item of _interested_products_">
+            <mat-card class="interested_cards ml-8 mr-8">
+                <mat-card-title-group>
+                    <mat-card-title>{{item.category | uppercase}}</mat-card-title>
+                    <mat-card-subtitle>{{item.name}}</mat-card-subtitle>
+                    <img mat-card-lg-image src="/assets/{{item.category}}/{{item.url1}}">
+                </mat-card-title-group>
+                <mat-card-content>
+                    <button mat-raised-button color="primary" (click)="clickedProduct(item.id,item.category)">Shop now</button>
+                </mat-card-content>
+            </mat-card>
+        </ng-container>
     </section>
 
 
-    <section class="similar_section"></section>
+    <section class="similar_section mt-10 mb-8">
+        <h1 class="!ml-8">Similar products</h1>
+        <ng-container *ngFor="let item of _similar_products_">
+            <mat-card class="similar_cards ml-8 mr-8">
+                <mat-card-title-group>
+                    <mat-card-title>{{item.category | uppercase}}</mat-card-title>
+                    <mat-card-subtitle>{{item.name}}</mat-card-subtitle>
+                    <img mat-card-lg-image src="/assets/{{item.category}}/{{item.url1}}">
+                </mat-card-title-group>
+                <mat-card-content>
+                    <button mat-raised-button color="primary" (click)="clickedProduct(item.id,item.category)">Shop now</button>
+                </mat-card-content>
+            </mat-card>
+        </ng-container>
+    </section>
+
+ </div>   
