--- a/src/app/landing-content/landing-content.component.html
+++ b/src/app/landing-content/landing-content.component.html
@@ -2,10 +2,11 @@
   <mat-drawer #sidenav class="sidenav" mode="over">
 
     <aside>
-      <h3>Products</h3>
-      <h4>Caps</h4>
-      <h4>Sunglasses</h4>
-      <h4>Hoodies</h4>
+      <hr>
+      <br>
+      <h4><a routerLink="/category/caps">Caps</a></h4>
+      <h4><a routerLink="/category/sunglasses">Sunglasses</a></h4>
+      <h4><a routerLink="/category/hood">Hoodies</a></h4>
       <hr>
       <br>
       <h3>Orders</h3>
@@ -35,8 +36,12 @@
         <mat-card-actions>
           <button mat-mini-fab color="primary">
             <mat-icon>add_shopping_cart</mat-icon>
-          </button>
-          <!-- <button mat-mini-fab color="primary"><mat-icon>stars</mat-icon></button> -->
+          </button>{{item.rating}}
+          <span id="aa" class="rating_svg" *ngIf="item.rating == 1"><mat-icon>sentiment_dissatisfied</mat-icon></span>
+          <span class="rating_svg" *ngIf="item.rating == 2"><mat-icon>sentiment_neutral</mat-icon></span>
+          <span class="rating_svg" *ngIf="item.rating == 3"><mat-icon>mood</mat-icon></span>
+          <span class="rating_svg" *ngIf="item.rating == 4"><mat-icon>sentiment_satisfied</mat-icon></span>
+          <span class="rating_svg" *ngIf="item.rating == 5"><mat-icon>sentiment_very_satisfied</mat-icon></span>
           <button mat-mini-fab color="primary" class="product_rating">
             <mat-icon>star_half</mat-icon>
           </button>
