--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,1 +1,25 @@
-<p>order works!</p>
+<main class="flex justify-center pt-6">
+  <section class="flex-initial w-6/12 cart-items">
+    <div name="address">
+      <p>Deliver to : Vadodara</p>
+    </div>
+    <div name="flex cart-items-list">
+      <ng-container>
+        <img src="#" />
+        <span name="item-details"></span>
+        <span name="item-delivery"></span>
+        <div name="item-actions"></div>
+      </ng-container>
+    </div>
+  </section>
+
+  <section class="flex-initial w-1/4 cart-pricing">
+    <h4>PRICE DETAILS</h4>
+    <hr />
+    <h4>Price<span>1000</span></h4>
+    <h4>Discount<span>200</span></h4>
+    <h4>Delivery charge<span>FREE</span></h4>
+    <hr />
+    <h3>Total Amount<span>BAHUT JYADA</span></h3>
+  </section>
+</main>
