--- a/src/app/open-product/open-product.component.css
+++ b/src/app/open-product/open-product.component.css
@@ -30,9 +30,9 @@
     grid-column: 3/4;
     grid-row: auto;
     padding-top: 8px;
-    padding-left: 15px;
+    padding-left: 5%;
     border-left: 1px solid lightgray;
-    max-width: 75%;
+    max-width: 80%;
 }
 
 /* for images */
@@ -56,6 +56,7 @@
 
 ul {
     list-style: unset;
+    /* columns: 2; */
 }
 
 .desc_width {
@@ -118,7 +119,6 @@ ul {
     margin-right: 1rem !important;
 }
 
-
 .interested_section,
 .similar_section {
     position: relative;
@@ -171,7 +171,7 @@ ul {
     left: 0;
     top: 51%;
     z-index: 9999;
-    /* transform: translateY(-50%); */
+    transform: translate(0, -50%);
 }
 
 .rightArrow {
@@ -179,5 +179,5 @@ ul {
     right: 0;
     top: 51%;
     z-index: 9999;
-    /* transform: translateY(-50%); */
+    transform: translate(0, -50%);
 }
