--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             <mat-icon>menu</mat-icon>
         </button>
 
-        <span class="brand_name" routerLink="/">SkyShop</span>
+        <span class="brand_name" routerLink="/">SKYSHOP</span>
     </div>
 
     <div class="w-full">
@@ -28,7 +28,7 @@
     <div class="w-full text-right">
         <button mat-icon-button aria-label="shopping cart" class="!mr-8" routerLink="/orders">
             <mat-icon [matBadge]="itemsIncart" matBadgePosition="after" matBadgeColor="accent"
-                [matBadgeHidden]="itemsIncart==0" matBadgeOverlap="false">add_shopping_cart</mat-icon>
+                [matBadgeHidden]="itemsIncart==0" matBadgeOverlap="false">shopping_cart_checkout</mat-icon>
         </button>
         <button mat-icon-button aria-label="profile icon" class="!w-12">
             <mat-icon>account_circle</mat-icon>
