--- a/src/app/landing-content/landing-content.component.css
+++ b/src/app/landing-content/landing-content.component.css
@@ -1,18 +1,9 @@
-/* .sideNavContainer {
-  width: 100%;
-  height: 100%;
-}
-
-.sidenav {
-  padding: 20px;
-} */
-
 .sidenav-content {
   /* height: 100%; */
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
-  grid-row: auto;
+  /* grid-row: auto; */
 }
 
 .product_rating {
@@ -27,9 +18,9 @@
 .rating_svg {
   position: absolute;
   float: right;
-  -webkit-animation: myAnimation 3s linear 2 alternate;
-  -moz-animation: myAnimation 3s linear 2 alternate;
-  animation: myAnimation 3s linear 2 alternate;
+  -webkit-animation: myAnimation 2s linear 2 alternate;
+  -moz-animation: myAnimation 2s linear 2 alternate;
+  animation: myAnimation 2s linear 2 alternate;
   animation-fill-mode: both;
 }
 
@@ -63,8 +54,6 @@
     -webkit-transform: rotate(360deg);
   }
 }
-
-
 
 
 .mat-card {
